updated js for tools page

--- a/bk/index.html
+++ b/bk/index.html
@@ -22,11 +22,10 @@
   <!-- ================= HERO ================= -->
   <section id="home" class="section hero">
     <div class="hero-content">
-      <h1>       Helping You 
-        Build, Automate & Earn Online</h1>
+      <h1>Helping You Build, Automate & Earn Online</h1>
       <p>
         Bita Digital Hub empowers creators and businesses to automate, scale, and grow
-        using Data, Cloud, and AI-powered systems.
+        using data, cloud, and AI-powered systems.
       </p>
       <div class="cta-buttons">
         <a href="#courses" class="btn primary">Start Your Online Business</a>
@@ -44,24 +43,106 @@
         <p>
           At Bita Digital Hub, we believe in the power of technology to create
           new opportunities for individuals and businesses alike.
-          Our mission is to simplify the path to digital success —
-          from intelligent strategy and system design to full-scale automation.
+          Our mission is to simplify the path to digital success from 
+          intelligent strategy and system design to full-scale automation.
         </p>
         <p>
           With deep experience in analytics, cloud platforms, and AI-driven
           solutions, we help you build, optimize, and scale your digital
           presence with confidence and clarity.
         </p>
-        <p class="signature">Bita Ashoori, CEO & Founder, Bita Digital Hub</p>
+        <p class="signature">Bita Ashoori, CEO & Founder</p>
       </div>
 
       <div class="about-card">
-        <div class="about-icon">💡</div>
+        <div class="about-icon">
+          <img src="assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" />
+        </div>
         <h3>Expert Team</h3>
         <p>Building your digital future through smart systems and creative automation.</p>
       </div>
     </div>
+  </section>
 
+  <!-- ================= TOOLS ================= -->
+  <section id="tools" class="section tools light">
+    <h2>Free Tools</h2>
+    <p class="section-sub">AI and automation tools to power your productivity</p>
+
+    <div class="tools-grid">
+      <div class="card gradient-blue">
+        <div class="card-icon"><i data-lucide="shield"></i></div>
+        <h3>Password Generator</h3>
+        <p>Create secure, custom passwords in seconds — designed to keep your digital world protected.</p>
+      </div>
+
+      <div class="card gradient-green">
+        <div class="card-icon"><i data-lucide="link-2"></i></div>
+        <h3>URL Shortener</h3>
+        <p>Track, shorten, and manage your links for marketing and performance analysis.</p>
+      </div>
+
+      <div class="card gradient-yellow">
+        <div class="card-icon"><i data-lucide="qr-code"></i></div>
+        <h3>QR Generator</h3>
+        <p>Create custom QR codes for campaigns, websites, or product tags in seconds.</p>
+      </div>
+
+      <div class="card gradient-pink">
+        <div class="card-icon"><i data-lucide="file"></i></div>
+        <h3>File Converter</h3>
+        <p>Transform PDFs, documents, and data files with one click — seamless and efficient.</p>
+      </div>
+
+      <div class="card gradient-gray">
+        <div class="card-icon"><i data-lucide="archive"></i></div>
+        <h3>Zip / UnZip</h3>
+        <p>Compress and extract files instantly with fast, secure performance.</p>
+      </div>
+
+      <div class="card gradient-cyan">
+        <div class="card-icon"><i data-lucide="table"></i></div>
+        <h3>CSV Cleaner</h3>
+        <p>Automatically clean and format CSV files — remove duplicates and prepare them for analysis.</p>
+      </div>
+
+      <div class="card gradient-purple">
+        <div class="card-icon"><i data-lucide="mic"></i></div>
+        <h3>Audio Transcriber</h3>
+        <p>Transcribe audio and voice recordings into clean, editable text using AI-powered recognition.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- ================= COURSES ================= -->
+  <section id="courses" class="section courses light">
+    <h2>Courses & Learning</h2>
+    <p class="section-sub">Grow your skills and business in the digital economy</p>
+
+    <div class="cards">
+      <div class="card gradient-green">
+        <div class="card-icon"><i data-lucide="book-open"></i></div>
+        <h3>Free Online Courses</h3>
+        <p>Access beginner-friendly courses on data, AI, and digital marketing.</p>
+      </div>
+
+      <div class="card gradient-blue">
+        <div class="card-icon"><i data-lucide="megaphone"></i></div>
+        <h3>Digital Marketing Mastery</h3>
+        <p>Learn how to promote your brand and grow your online presence effectively.</p>
+      </div>
+
+      <div class="card gradient-pink">
+        <div class="card-icon"><i data-lucide="briefcase"></i></div>
+        <h3>Online Franchise System</h3>
+        <p>Start your own business using our automation-ready digital franchise model.</p>
+      </div>
+
+      <div class="cta-buttons">
+       <a href="#contact" class="btn outline">Schedule a Free Consultation</a>
+      </div>
+    
+    </div>
   </section>
 
   <!-- ================= SERVICES ================= -->
@@ -94,64 +175,9 @@
         <p>Automate customer engagement, lead collection, and marketing with smart bots.</p>
       </div>
     </div>
-  </section>
 
-  <!-- ================= TOOLS ================= -->
-  <section id="tools" class="section tools light">
-    <h2>Tools & Automation</h2>
-    <p class="section-sub">AI and automation tools to power your productivity</p>
-
-    <div class="tools-grid">
-      <div class="card gradient-blue">
-        <div class="card-icon"><i data-lucide="bar-chart-2"></i></div>
-        <h3>Social Media Audit</h3>
-        <p>Analyze your engagement and get data-driven insights for growth.</p>
-      </div>
-
-      <div class="card gradient-green">
-        <div class="card-icon"><i data-lucide="link-2"></i></div>
-        <h3>URL Shortener</h3>
-        <p>Track and manage your links for marketing and performance analysis.</p>
-      </div>
-
-      <div class="card gradient-yellow">
-        <div class="card-icon"><i data-lucide="qr-code"></i></div>
-        <h3>QR Generator</h3>
-        <p>Create custom QR codes for campaigns, websites, or product tags.</p>
-      </div>
-
-      <div class="card gradient-pink">
-        <div class="card-icon"><i data-lucide="bot"></i></div>
-        <h3>Telegram Bot Builder</h3>
-        <p>Design and deploy bots to automate leads, sales, and customer interactions.</p>
-      </div>
-    </div>
-  </section>
-
-
-  <!-- ================= COURSES ================= -->
-  <section id="courses" class="section courses light">
-    <h2>Courses & Learning</h2>
-    <p class="section-sub">Grow your skills and business in the digital economy</p>
-
-    <div class="cards">
-      <div class="card gradient-green">
-        <div class="card-icon"><i data-lucide="book-open"></i></div>
-        <h3>Free Online Courses</h3>
-        <p>Access beginner-friendly courses on data, AI, and digital marketing.</p>
-      </div>
-
-      <div class="card gradient-blue">
-        <div class="card-icon"><i data-lucide="megaphone"></i></div>
-        <h3>Digital Marketing Mastery</h3>
-        <p>Learn how to promote your brand and grow your online presence effectively.</p>
-      </div>
-
-      <div class="card gradient-pink">
-        <div class="card-icon"><i data-lucide="briefcase"></i></div>
-        <h3>Online Franchise System</h3>
-        <p>Start your own business using our automation-ready digital franchise model.</p>
-      </div>
+    <div class="cta-buttons">
+      <a href="#contact" class="btn outline">Schedule a Free Consultation</a>
     </div>
   </section>
 
@@ -163,29 +189,29 @@
     <form class="contact-form" action="https://formsubmit.co/contact@bitadigitalhub.com" method="POST">
       <div class="form-grid">
         <div class="form-group">
-          <label>Full Name *</label>
-          <input type="text" name="name" placeholder="Your full name" required />
+          <label for="name">Full Name *</label>
+          <input type="text" id="name" name="name" placeholder="Your full name" required />
         </div>
         <div class="form-group">
-          <label>Email Address *</label>
-          <input type="email" name="email" placeholder="your@email.com" required />
+          <label for="email">Email Address *</label>
+          <input type="email" id="email" name="email" placeholder="your@email.com" required />
         </div>
       </div>
 
       <div class="form-grid">
         <div class="form-group">
-          <label>Company</label>
-          <input type="text" name="company" placeholder="Company name" />
+          <label for="company">Company</label>
+          <input type="text" id="company" name="company" placeholder="Company name" />
         </div>
         <div class="form-group">
-          <label>Phone</label>
-          <input type="text" name="phone" placeholder="+1 604 000 0000" />
+          <label for="phone">Phone</label>
+          <input type="text" id="phone" name="phone" placeholder="+1 604 000 0000" />
         </div>
       </div>
 
       <div class="form-group">
-        <label>Service Interested In *</label>
-        <select name="service" required>
+        <label for="service">Service Interested In *</label>
+        <select id="service" name="service" required>
           <option value="">Select a service</option>
           <option>AI Personal Branding</option>
           <option>Website Creation</option>
@@ -195,8 +221,8 @@
       </div>
 
       <div class="form-group">
-        <label>Message *</label>
-        <textarea name="message" placeholder="Tell us about your project..." required></textarea>
+        <label for="message">Message *</label>
+        <textarea id="message" name="message" placeholder="Tell us about your project..." required></textarea>
       </div>
 
       <button type="submit" class="btn primary">Send Message</button>
