--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p>
           At Bita Digital Hub, we believe in the power of technology to create
           new opportunities for individuals and businesses alike.
-          Our mission is to simplify the path to digital success from 
+          Our mission is to simplify the path to digital success — from 
           intelligent strategy and system design to full-scale automation.
         </p>
         <p>
@@ -51,7 +51,7 @@
           solutions, we help you build, optimize, and scale your digital
           presence with confidence and clarity.
         </p>
-        <p class="signature">Bita Ashoori, CEO & Founder</p>
+        <p class="signature">— Bita Ashoori, CEO & Founder</p>
       </div>
 
       <div class="about-card">
@@ -70,47 +70,49 @@
     <p class="section-sub">AI and automation tools to power your productivity</p>
 
     <div class="tools-grid">
-      <div class="card gradient-blue">
+
+      <a href="tools/password-generator.html" class="card gradient-blue">
         <div class="card-icon"><i data-lucide="shield"></i></div>
         <h3>Password Generator</h3>
         <p>Create secure, custom passwords in seconds — designed to keep your digital world protected.</p>
-      </div>
+      </a>
 
-      <div class="card gradient-green">
-        <div class="card-icon"><i data-lucide="link-2"></i></div>
-        <h3>URL Shortener</h3>
-        <p>Track, shorten, and manage your links for marketing and performance analysis.</p>
-      </div>
-
-      <div class="card gradient-yellow">
-        <div class="card-icon"><i data-lucide="qr-code"></i></div>
-        <h3>QR Generator</h3>
-        <p>Create custom QR codes for campaigns, websites, or product tags in seconds.</p>
-      </div>
-
-      <div class="card gradient-pink">
+      <a href="tools/file-converter.html" class="card gradient-pink">
         <div class="card-icon"><i data-lucide="file"></i></div>
         <h3>File Converter</h3>
         <p>Transform PDFs, documents, and data files with one click — seamless and efficient.</p>
-      </div>
+      </a>
 
-      <div class="card gradient-orange">
-        <div class="card-icon"><i data-lucide="archive"></i></div>
-        <h3>Zip / UnZip</h3>
-        <p>Compress and extract files instantly with fast, secure performance.</p>
-      </div>
-
-      <div class="card gradient-cyan">
+      <a href="tools/csv-cleaner.html" class="card gradient-cyan">
         <div class="card-icon"><i data-lucide="table"></i></div>
         <h3>CSV Cleaner</h3>
         <p>Automatically clean and format CSV files — remove duplicates and prepare them for analysis.</p>
-      </div>
+      </a>
 
-      <div class="card gradient-purple">
+      <a href="tools/zip-unzip.html" class="card gradient-gray">
+        <div class="card-icon"><i data-lucide="archive"></i></div>
+        <h3>Zip / UnZip</h3>
+        <p>Compress and extract files instantly with fast, secure performance.</p>
+      </a>
+
+      <a href="tools/audio-transcriber.html" class="card gradient-purple">
         <div class="card-icon"><i data-lucide="mic"></i></div>
         <h3>Audio Transcriber</h3>
         <p>Transcribe audio and voice recordings into clean, editable text using AI-powered recognition.</p>
-      </div>
+      </a>
+
+      <a href="tools/url-shortener.html" class="card gradient-green">
+        <div class="card-icon"><i data-lucide="link-2"></i></div>
+        <h3>URL Shortener</h3>
+        <p>Track, shorten, and manage your links for marketing and performance analysis.</p>
+      </a>
+
+      <a href="tools/qr-generator.html" class="card gradient-yellow">
+        <div class="card-icon"><i data-lucide="qr-code"></i></div>
+        <h3>QR Generator</h3>
+        <p>Create custom QR codes for campaigns, websites, or product tags in seconds.</p>
+      </a>
+
     </div>
   </section>
 
@@ -139,9 +141,8 @@
       </div>
 
       <div class="cta-buttons">
-       <a href="#contact" class="btn outline">Schedule a Free Consultation</a>
+        <a href="#contact" class="btn outline">Schedule a Free Consultation</a>
       </div>
-    
     </div>
   </section>
 
@@ -181,7 +182,7 @@
     </div>
   </section>
 
-  <!-- ================= CONTACT FORM ================= -->
+  <!-- ================= CONTACT ================= -->
   <section id="contact" class="section contact light">
     <h2>Contact Us</h2>
     <p class="section-sub">Let’s build something amazing together</p>
@@ -232,7 +233,7 @@
   <!-- ================= FOOTER ================= -->
   <div id="footer-placeholder"></div>
 
-  <!-- 🌀 Init Lucide Icons -->
+  <!-- 🌀 Initialize Lucide Icons -->
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       lucide.createIcons();
