--- a/index.html
+++ b/index.html
@@ -12,39 +12,39 @@
   <link rel="stylesheet" href="css/components.css" />
   <link rel="stylesheet" href="css/responsive.css" />
 
-  <!-- ⚙️ Core Scripts -->
+  <!-- ⚙️ Scripts -->
   <script src="js/script.js" defer></script>
   <script src="https://unpkg.com/lucide@latest" defer></script>
 
   <style>
-    /* --- Fix header overlap --- */
     body {
       margin: 0;
-      padding-top: 80px; /* height of fixed navbar */
+      padding-top: 80px;
       font-family: "Poppins", sans-serif;
       background: #f9fafb;
       color: #0f172a;
     }
 
-    /* --- Hero Section --- */
+    /* ---------- HERO ---------- */
     .hero {
       text-align: center;
-      padding: 5rem 1rem 4rem;
-      background: var(--bg);
+      padding: 6rem 1rem 5rem;
+      background: #f8fafc;
     }
 
     .hero h1 {
-      font-size: 2rem;
-      font-weight: 700;
-      color: var(--text-dark);
+      font-size: 3rem;
+      font-weight: 800;
+      color: #0f172a;
       margin-bottom: 1rem;
     }
 
     .hero p {
-      max-width: 600px;
-      margin: 0 auto 1.5rem;
-      color: var(--text-mid);
-      line-height: 1.6;
+      max-width: 750px;
+      margin: 0 auto 2rem;
+      color: #334155;
+      line-height: 1.7;
+      font-size: 1.1rem;
     }
 
     .cta-buttons {
@@ -54,54 +54,28 @@
       flex-wrap: wrap;
     }
 
-    /* --- Section spacing --- */
+    /* ---------- SECTION BASE ---------- */
     .section {
       padding: 4rem 1rem;
       max-width: 1100px;
       margin: 0 auto;
     }
 
-    .section.light {
-      background: #ffffff;
-    }
-
     .section h2 {
       text-align: center;
-      font-size: 1.8rem;
+      font-size: 2rem;
       font-weight: 700;
-      color: var(--text-dark);
-      margin-bottom: 0.5rem;
+      color: #0f172a;
+      margin-bottom: 0.6rem;
     }
 
     .section-sub {
       text-align: center;
-      color: var(--text-mid);
+      color: #475569;
       margin-bottom: 2rem;
-      font-size: 1rem;
     }
 
-    /* --- About Grid --- */
-    .about-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 2rem;
-      align-items: start;
-    }
-
-    .about-card {
-      background: var(--white);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow-md);
-      padding: 2rem;
-      text-align: center;
-    }
-
-    .about-card img {
-      width: 60px;
-      margin-bottom: 1rem;
-    }
-
-    /* --- Tools Grid --- */
+    /* ---------- TOOLS ---------- */
     .tools-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
@@ -109,19 +83,18 @@
       margin-top: 2rem;
     }
 
-    /* --- Cards --- */
     .card {
-      text-align: center;
       border-radius: 16px;
-      padding: 2rem 1.2rem;
+      padding: 2rem 1.5rem;
+      text-align: center;
       color: #fff;
-      box-shadow: var(--shadow-md);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
       transition: transform 0.25s ease, box-shadow 0.25s ease;
     }
 
     .card:hover {
       transform: translateY(-5px);
-      box-shadow: var(--shadow-lg);
+      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.12);
     }
 
     .card-icon {
@@ -136,18 +109,35 @@
     }
 
     .card h3 {
+      margin-bottom: 0.5rem;
       font-size: 1.2rem;
       font-weight: 600;
-      margin-bottom: 0.5rem;
     }
 
     .card p {
       font-size: 0.95rem;
-      line-height: 1.5;
-      color: #f8fafc;
+      line-height: 1.6;
+      color: #f1f5f9;
     }
 
-    /* --- Contact --- */
+    /* ---------- COLOR GRADIENTS ---------- */
+    .gradient-blue { background: linear-gradient(135deg, #1e3a8a, #2563eb); }
+    .gradient-pink { background: linear-gradient(135deg, #ec4899, #f43f5e); }
+    .gradient-green { background: linear-gradient(135deg, #16a34a, #22c55e); }
+    .gradient-yellow { background: linear-gradient(135deg, #f59e0b, #facc15); }
+    .gradient-cyan { background: linear-gradient(135deg, #0891b2, #06b6d4); }
+    .gradient-purple { background: linear-gradient(135deg, #7c3aed, #8b5cf6); }
+    .gradient-gray { background: linear-gradient(135deg, #475569, #64748b); }
+
+    /* ---------- COURSES ---------- */
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 1.5rem;
+      margin-top: 2rem;
+    }
+
+    /* ---------- CONTACT FORM ---------- */
     .contact-form {
       max-width: 700px;
       margin: 2rem auto;
@@ -162,65 +152,49 @@
       gap: 1rem;
     }
 
-    .form-group label {
-      font-weight: 500;
-      color: var(--text-dark);
-    }
-
-    .form-group input,
-    .form-group select,
-    .form-group textarea {
+    input, select, textarea {
       width: 100%;
       padding: 0.7rem 0.9rem;
-      border: 1px solid var(--border);
+      border: 1px solid #e2e8f0;
       border-radius: 8px;
       background: #f9fafb;
     }
 
-    .form-group textarea {
+    textarea {
       height: 120px;
       resize: vertical;
     }
 
-    /* --- Buttons --- */
+    /* ---------- BUTTONS ---------- */
     .btn {
       display: inline-block;
       border-radius: 8px;
-      padding: 0.6rem 1.4rem;
+      padding: 0.8rem 1.6rem;
       font-weight: 600;
-      transition: all 0.3s ease;
       text-decoration: none;
+      transition: all 0.3s ease;
     }
 
-    .btn.primary {
-      background: var(--primary);
-      color: #fff;
-    }
-
-    .btn.primary:hover {
-      background: var(--primary-hover);
-    }
+    .btn.primary { background: #1e3a8a; color: #fff; }
+    .btn.primary:hover { background: #2563eb; }
 
     .btn.outline {
-      border: 2px solid var(--primary);
-      color: var(--primary);
+      border: 2px solid #1e3a8a;
+      color: #1e3a8a;
+      background: transparent;
     }
-
-    .btn.outline:hover {
-      background: var(--primary);
-      color: #fff;
-    }
+    .btn.outline:hover { background: #1e3a8a; color: #fff; }
   </style>
 </head>
 
 <body>
-  <!-- 🧭 Shared Header -->
+  <!-- 🧭 Header -->
   <div id="header-placeholder"></div>
   <script>
     fetch("components/header.html")
       .then(res => res.text())
       .then(html => { document.getElementById("header-placeholder").innerHTML = html; })
-      .catch(err => console.error("Header load error:", err));
+      .catch(console.error);
   </script>
 
   <!-- ================= HERO ================= -->
@@ -241,19 +215,16 @@
   <!-- ================= ABOUT ================= -->
   <section id="about" class="section about light">
     <div class="about-grid">
-      <div class="about-text">
+      <div>
         <h2>Welcome to Bita Digital Hub</h2>
         <h4>Leading digital transformation with data, AI, and automation</h4>
         <p>
           At Bita Digital Hub, we believe in the power of technology to create
           new opportunities for individuals and businesses alike.
-          Our mission is to simplify the path to digital success — from 
-          intelligent strategy and system design to full-scale automation.
         </p>
         <p>
-          With deep experience in analytics, cloud platforms, and AI-driven
-          solutions, we help you build, optimize, and scale your digital
-          presence with confidence and clarity.
+          Our mission is to simplify the path to digital success — from intelligent strategy
+          and system design to full-scale automation.
         </p>
         <p class="signature">— Bita Ashoori, CEO & Founder</p>
       </div>
@@ -299,7 +270,7 @@
       <a href="tools/audio-transcriber.html" class="card gradient-purple">
         <div class="card-icon"><i data-lucide="mic"></i></div>
         <h3>Audio Transcriber</h3>
-        <p>Transcribe audio and voice recordings into clean, editable text using AI-powered recognition.</p>
+        <p>Transcribe audio and voice recordings into clean, editable text using AI recognition.</p>
       </a>
 
       <a href="tools/url-shortener.html" class="card gradient-green">
@@ -316,20 +287,89 @@
     </div>
   </section>
 
-  <!-- ================= OTHER SECTIONS (Courses, Services, Contact) ================= -->
-  <!-- Keep your existing content below unchanged -->
+  <!-- ================= COURSES ================= -->
+  <section id="courses" class="section light">
+    <h2>Courses & Learning</h2>
+    <p class="section-sub">Grow your skills and business in the digital economy</p>
+    <div class="cards">
+      <div class="card gradient-green">
+        <div class="card-icon"><i data-lucide="book-open"></i></div>
+        <h3>Free Online Courses</h3>
+        <p>Access beginner-friendly courses on data, AI, and digital marketing.</p>
+      </div>
 
-  <!-- 🦶 Shared Footer -->
+      <div class="card gradient-blue">
+        <div class="card-icon"><i data-lucide="megaphone"></i></div>
+        <h3>Digital Marketing Mastery</h3>
+        <p>Learn how to promote your brand and grow your online presence effectively.</p>
+      </div>
+
+      <div class="card gradient-pink">
+        <div class="card-icon"><i data-lucide="briefcase"></i></div>
+        <h3>Online Franchise System</h3>
+        <p>Start your own business using our automation-ready digital franchise model.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- ================= SERVICES ================= -->
+  <section id="services" class="section">
+    <h2>Our Services</h2>
+    <p class="section-sub">Complete solutions for your digital transformation</p>
+    <div class="cards">
+      <div class="card gradient-blue">
+        <div class="card-icon"><i data-lucide="sparkles"></i></div>
+        <h3>AI Personal Branding</h3>
+        <p>Build your brand identity using AI-generated strategies, visuals, and insights.</p>
+      </div>
+
+      <div class="card gradient-green">
+        <div class="card-icon"><i data-lucide="layout-dashboard"></i></div>
+        <h3>Website Creation</h3>
+        <p>Responsive, optimized websites designed for performance and impact.</p>
+      </div>
+
+      <div class="card gradient-yellow">
+        <div class="card-icon"><i data-lucide="bar-chart-3"></i></div>
+        <h3>Data & Analytics</h3>
+        <p>Transform raw data into actionable insights with dashboards and reports.</p>
+      </div>
+
+      <div class="card gradient-pink">
+        <div class="card-icon"><i data-lucide="bot"></i></div>
+        <h3>Telegram Robots</h3>
+        <p>Automate customer engagement, lead collection, and marketing with smart bots.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- ================= CONTACT ================= -->
+  <section id="contact" class="section light">
+    <h2>Contact Us</h2>
+    <p class="section-sub">Let’s build something amazing together</p>
+
+    <form class="contact-form" action="https://formsubmit.co/contact@bitadigitalhub.com" method="POST">
+      <div class="form-grid">
+        <div><label for="name">Full Name *</label><input id="name" name="name" required></div>
+        <div><label for="email">Email *</label><input type="email" id="email" name="email" required></div>
+      </div>
+      <div class="form-grid">
+        <div><label for="company">Company</label><input id="company" name="company"></div>
+        <div><label for="phone">Phone</label><input id="phone" name="phone"></div>
+      </div>
+      <div><label for="message">Message *</label><textarea id="message" name="message" required></textarea></div>
+      <button type="submit" class="btn primary">Send Message</button>
+    </form>
+  </section>
+
+  <!-- 🦶 Footer -->
   <div id="footer-placeholder"></div>
   <script>
     fetch("components/footer.html")
       .then(res => res.text())
       .then(html => { document.getElementById("footer-placeholder").innerHTML = html; })
-      .catch(err => console.error("Footer load error:", err));
-  </script>
+      .catch(console.error);
 
-  <!-- Initialize Icons -->
-  <script>
     document.addEventListener("DOMContentLoaded", () => lucide.createIcons());
   </script>
 </body>
