updated index with logo

--- a/index.html
+++ b/index.html
@@ -215,6 +215,10 @@
   <!-- ================= ABOUT ================= -->
   <section id="about" class="section about light">
     <div class="about-grid">
+      <div class="about-card">
+        <img src="assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" />
+      </div>
+
       <div>
         <h2>Welcome to Bita Digital Hub</h2>
         <h4>Leading digital transformation with data, AI, and automation</h4>
@@ -223,17 +227,12 @@
           new opportunities for individuals and businesses alike.
         </p>
         <p>
-          Our mission is to simplify the path to digital success — from intelligent strategy
+          Our mission is to simplify the path to digital success from intelligent strategy
           and system design to full-scale automation.
         </p>
         <p class="signature">— Bita Ashoori, CEO & Founder</p>
       </div>
-
-      <div class="about-card">
-        <img src="assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" />
-        <h3>Expert Team</h3>
-        <p>Building your digital future through smart systems and creative automation.</p>
-      </div>
+      
     </div>
   </section>
 
