--- a/tools/zip-unzip.html
+++ b/tools/zip-unzip.html
@@ -34,6 +34,10 @@
   </script>
 
   <!-- 🌐 Brand Section -->
+   <header class="brand-header center">
+    <div class="brand-inner">
+    </div>
+  </header>
 
   <!-- 🧰 Tool Layout -->
   <main class="tool-layout" role="main">
