--- a/contact.html
+++ b/contact.html
@@ -1,25 +1,179 @@
-<!-- ================= CONTACT FORM ================= -->
-  <section id="contact" class="section contact light">
-    <h2>Contact Us</h2>
-    <p class="section-sub">Let’s build something amazing together</p>
+<!DOCTYPE html>
+<html lang="en" data-page="contact">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact Us | Bita Digital Hub</title>
+  <meta name="description" content="Contact Bita Digital Hub — we help you build, automate, and grow your digital business using data, AI, and automation." />
 
+  <!-- 🌈 Unified Styles -->
+  <link rel="icon" type="image/svg+xml" href="assets/taskhub-logo.svg" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/theme.css" />
+  <link rel="stylesheet" href="css/components.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
+
+  <!-- 💰 Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3215014361489762"
+          crossorigin="anonymous"></script>
+
+  <style>
+    body {
+      margin: 0;
+      padding-top: 80px;
+      font-family: "Poppins", sans-serif;
+      background: #f9fafb;
+      color: #0f172a;
+    }
+
+    .contact-hero {
+      text-align: center;
+      padding: 5rem 1rem 3rem;
+      background: #f8fafc;
+    }
+
+    .contact-hero h1 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      color: #0f172a;
+      margin-bottom: 1rem;
+    }
+
+    .contact-hero p {
+      color: #475569;
+      max-width: 650px;
+      margin: 0 auto;
+      line-height: 1.6;
+    }
+
+    .contact-section {
+      padding: 4rem 1rem;
+      max-width: 900px;
+      margin: 0 auto;
+      background: #ffffff;
+      border-radius: 16px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.05);
+    }
+
+    .contact-form {
+      display: flex;
+      flex-direction: column;
+      gap: 1.2rem;
+      margin-top: 2rem;
+    }
+
+    .form-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 1rem;
+    }
+
+    .form-group label {
+      font-weight: 600;
+      color: #0f172a;
+      margin-bottom: 0.3rem;
+      display: block;
+    }
+
+    .form-group input,
+    .form-group select,
+    .form-group textarea {
+      width: 100%;
+      padding: 0.8rem 1rem;
+      border: 1px solid #e2e8f0;
+      border-radius: 8px;
+      background: #f9fafb;
+      font-size: 1rem;
+      color: #0f172a;
+    }
+
+    .form-group textarea {
+      height: 140px;
+      resize: vertical;
+    }
+
+    .primary-btn {
+      background: #1e3a8a;
+      color: #fff;
+      border: none;
+      padding: 0.9rem 1.6rem;
+      font-weight: 600;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    .primary-btn:hover {
+      background: #2563eb;
+    }
+
+    .info-boxes {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 1.5rem;
+      margin-top: 3rem;
+    }
+
+    .info-card {
+      background: #f8fafc;
+      border-radius: 12px;
+      padding: 1.8rem;
+      text-align: center;
+      border: 1px solid #e2e8f0;
+    }
+
+    .info-card h3 {
+      color: #1e3a8a;
+      font-size: 1.1rem;
+      font-weight: 600;
+      margin-bottom: 0.5rem;
+    }
+
+    .info-card p {
+      color: #475569;
+      font-size: 0.95rem;
+    }
+  </style>
+</head>
+
+<body>
+  <!-- 🧭 Shared Header -->
+  <div id="header-placeholder"></div>
+  <script>
+    fetch("components/header.html")
+      .then(res => res.text())
+      .then(html => { document.getElementById("header-placeholder").innerHTML = html; })
+      .catch(err => console.error("Header load error:", err));
+  </script>
+
+  <!-- 🌟 Hero -->
+  <section class="contact-hero">
+    <h1>Get in Touch</h1>
+    <p>Have a project in mind or need expert advice?  
+    Let’s connect and build your digital growth together.</p>
+  </section>
+
+  <!-- 💬 Contact Form -->
+  <section class="contact-section">
     <form class="contact-form" action="https://formsubmit.co/contact@bitadigitalhub.com" method="POST">
       <div class="form-grid">
         <div class="form-group">
           <label for="name">Full Name *</label>
-          <input type="text" id="name" name="name" placeholder="Your full name" required />
+          <input type="text" id="name" name="name" required placeholder="Your full name" />
         </div>
+
         <div class="form-group">
           <label for="email">Email Address *</label>
-          <input type="email" id="email" name="email" placeholder="your@email.com" required />
+          <input type="email" id="email" name="email" required placeholder="your@email.com" />
         </div>
       </div>
 
       <div class="form-grid">
         <div class="form-group">
           <label for="company">Company</label>
-          <input type="text" id="company" name="company" placeholder="Company name" />
+          <input type="text" id="company" name="company" placeholder="Company name (optional)" />
         </div>
+
         <div class="form-group">
           <label for="phone">Phone</label>
           <input type="text" id="phone" name="phone" placeholder="+1 604 000 0000" />
@@ -39,9 +193,38 @@
 
       <div class="form-group">
         <label for="message">Message *</label>
-        <textarea id="message" name="message" placeholder="Tell us about your project..." required></textarea>
+        <textarea id="message" name="message" required placeholder="Tell us about your project..."></textarea>
       </div>
 
-      <button type="submit" class="btn primary">Send Message</button>
+      <button type="submit" class="primary-btn">Send Message</button>
     </form>
+
+    <!-- ℹ️ Info Boxes -->
+    <div class="info-boxes">
+      <div class="info-card">
+        <h3>📍 Location</h3>
+        <p>Vancouver, British Columbia, Canada</p>
+      </div>
+
+      <div class="info-card">
+        <h3>📧 Email</h3>
+        <p><a href="mailto:contact@bitadigitalhub.com">contact@bitadigitalhub.com</a></p>
+      </div>
+
+      <div class="info-card">
+        <h3>🤝 Collaborations</h3>
+        <p>We’re open to partnerships, affiliate programs, and freelance projects.</p>
+      </div>
+    </div>
   </section>
+
+  <!-- 🦶 Shared Footer -->
+  <div id="footer-placeholder"></div>
+  <script>
+    fetch("components/footer.html")
+      .then(res => res.text())
+      .then(html => { document.getElementById("footer-placeholder").innerHTML = html; })
+      .catch(err => console.error("Footer load error:", err));
+  </script>
+</body>
+</html>
