--- a/index.html
+++ b/index.html
@@ -120,14 +120,15 @@
       color: #f1f5f9;
     }
 
-    /* ---------- COLOR GRADIENTS ---------- */
-    .gradient-blue { background: linear-gradient(135deg, #1e3a8a, #2563eb); }
-    .gradient-pink { background: linear-gradient(135deg, #ec4899, #f43f5e); }
-    .gradient-green { background: linear-gradient(135deg, #16a34a, #22c55e); }
-    .gradient-yellow { background: linear-gradient(135deg, #f59e0b, #facc15); }
-    .gradient-cyan { background: linear-gradient(135deg, #0891b2, #06b6d4); }
-    .gradient-purple { background: linear-gradient(135deg, #7c3aed, #8b5cf6); }
-    .gradient-gray { background: linear-gradient(135deg, #475569, #64748b); }
+    /* ---------- LIGHT COLOR GRADIENTS (Soft Edition) ---------- */
+    .gradient-blue   { background: linear-gradient(135deg, #93c5fd, #60a5fa); }   /* soft sky blue */
+    .gradient-pink   { background: linear-gradient(135deg, #f9a8d4, #fb7185); }   /* rose pink */
+    .gradient-green  { background: linear-gradient(135deg, #86efac, #4ade80); }   /* minty green */
+    .gradient-yellow { background: linear-gradient(135deg, #fde68a, #facc15); }   /* soft amber */
+    .gradient-cyan   { background: linear-gradient(135deg, #67e8f9, #22d3ee); }   /* light teal */
+    .gradient-purple { background: linear-gradient(135deg, #c4b5fd, #a78bfa); }   /* lavender violet */
+    .gradient-gray   { background: linear-gradient(135deg, #e2e8f0, #cbd5e1); }   /* silver-gray */
+
 
     /* ---------- COURSES ---------- */
     .cards {
