--- a/index.html
+++ b/index.html
@@ -121,14 +121,16 @@
     }
 
     /* ---------- LIGHT COLOR GRADIENTS (Soft Edition) ---------- */
-    .gradient-blue   { background: linear-gradient(135deg, #93c5fd, #60a5fa); }   /* soft sky blue */
-    .gradient-pink   { background: linear-gradient(135deg, #f9a8d4, #fb7185); }   /* rose pink */
-    .gradient-green  { background: linear-gradient(135deg, #86efac, #4ade80); }   /* minty green */
-    .gradient-yellow { background: linear-gradient(135deg, #fde68a, #facc15); }   /* soft amber */
-    .gradient-cyan   { background: linear-gradient(135deg, #67e8f9, #22d3ee); }   /* light teal */
-    .gradient-purple { background: linear-gradient(135deg, #c4b5fd, #a78bfa); }   /* lavender violet */
-    .gradient-gray   { background: linear-gradient(135deg, #e2e8f0, #cbd5e1); }   /* silver-gray */
-
+   
+    .gradient-blue { background: linear-gradient(145deg, #edf3ff, #f5f8ff); border-left: 5px solid #2563eb; }
+    .gradient-green { background: linear-gradient(145deg, #ecfdf5, #f6fff9); border-left: 5px solid #16a34a; }
+    .gradient-yellow { background: linear-gradient(145deg, #fff9eb, #fffdf5); border-left: 5px solid #f59e0b; }
+    .gradient-pink { background: linear-gradient(145deg, #fdf2f8, #fff5f9); border-left: 5px solid #db2777; }
+    .gradient-orange { background: linear-gradient(145deg, #fff7ed, #fffaf3); border-left: 5px solid #fb923c; }
+    .gradient-cyan { background: linear-gradient(145deg, #ecfeff, #f0f9ff); border-left: 5px solid #06b6d4; }
+    .gradient-purple { background: linear-gradient(145deg, #f5f3ff, #faf5ff); border-left: 5px solid #8b5cf6; }
+    .gradient-red { background: linear-gradient(145deg, #ffe4e6, #fff7f7); border-left: 5px solid #ef4444; }
+    .gradient-gray { background: linear-gradient(145deg, #f3f4f6, #ffffff); border-left: 5px solid #64748b; }
 
     /* ---------- COURSES ---------- */
     .cards {
